# OpenAPlus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml
content/comptia/aplus/220-1202/: README.md
docs/: ANKI_IMPORT.md  CARD_AUTHORING_GUIDE.md  CARD_QUALITY_EXAMPLES.md  CARD_SCHEMA.md  CLOZE_GUIDE.md  CONTENT_CREATION_RULES.md  HINTS.md  IMAGE_CARD_GUIDE.md  IMAGE_WORKFLOW.md  INSTRUCTOR_NOTES_GUIDE.md  INTERVIEW_TROUBLESHOOTING.md  LICENSE  OBJECTIVE_COMPLETION_CHECKLIST.md  OpenAPlus_Review_Prompt_Pack.md  README.md  SMOKE_TEST_COMMIT_POLICY.md  SOURCE_AND_CITATION_RULES.md  TAGGING.md
docs/agents/: bloat-reviewer-standard.md  independent-reviewer-standard.md  objective-author-standard.md
docs/image-sources/: 3.2-cable-types-connectors-features-and-purposes.md
output/tsv/220-1201/1.1-laptop-hardware/: Basic.tsv  Cloze.tsv  Image.tsv
output/tsv/220-1201/1.2-connecting-mobile-devices/: Basic.tsv  Cloze.tsv  Image.tsv
output/tsv/220-1201/1.3-mobile-device-management/: Basic.tsv  Cloze.tsv
output/tsv/220-1201/1.3-mobile-device-networks/: Basic.tsv  Cloze.tsv
scripts/: build.py  generate_tsv.py  install_anki_media.py  validate.py
src/openaplus/: __init__.py  content_pipeline.py
tests/: test_content_pipeline.py  test_install_anki_media.py  test_package.py
website/: docusaurus.config.js  package-lock.json  package.json  tsconfig.json
website/src/css/: custom.css
website/src/pages/: index.jsx  index.module.css
(+1417 files in other folders)
