[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openaplus"
version = "0.1.0"
description = "Open-source learning platform for CompTIA certifications"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "LICENSE-CONTENT"]
authors = [{ name = "OpenAPlus contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "Markdown>=3.7",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/OpenAPlus/OpenAPlus"
Issues = "https://github.com/OpenAPlus/OpenAPlus/issues"
Repository = "https://github.com/OpenAPlus/OpenAPlus"

[tool.hatch.build.targets.wheel]
packages = ["src/openaplus"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/LICENSE-CONTENT",
  "/README.md",
  "/docs",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
